bdr.BDR.scala.error
Erreur de compilation :
BDR:8: error: identifier expected but '}' found.
  }
  ^